# humanoid

./: .clang-format  .gitattributes  .gitignore  Dockerfile  README.md  calibration.sh  install_dependency.sh  launch.sh  launch_frontend.sh  play_gesture_dancing.sh  play_hug.sh  play_refuse.sh  play_show_direction.sh  reset_usb.sh  talk2.json  teach.sh  teach_draw.sh  teach_sequence.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
humanoid_arm/: package.xml  setup.cfg  setup.py
humanoid_arm/config/: motor_mapping.yaml
humanoid_arm/frames/: calibration.json  cmdemo4.json  cmdemo6.json  cmdemo7.json  demo2_1.json  demo2_10.json  demo2_11.json  demo2_2.json  demo2_3.json  demo2_4.json  demo2_5.json  demo2_6.json  demo2_7.json  demo3_1.json  demo3_3.json  draw1.json  draw2.json  draw3.json  draw4.json  draw5.json  draw6.json  draw7.json  draw8.json  draw9.json  extend.json  gesture_dancing1.json  gesture_dancing11.json  gesture_dancing13.json  gesture_dancing14.json  gesture_dancing16.json  gesture_dancing17.json  gesture_dancing2.json  gesture_dancing20.json  gesture_dancing21.json  gesture_dancing4.json  gesture_dancing5.json  gesture_dancing8.json  gesture_dancing9.json  grab1.json  grab2.json  (+27 more)
humanoid_arm/frames/frames/: Shengshou1.json  Shengshou2.json  Xiaqii1.json  Xiaqii2.json  calibration.json  cmdemo1.json  cmdemo2.json  cmdemo3.json  cmdemo5.json  cmdemo8.json  cmdemo9.json  cross.json  demo2_1.json  demo2_5.json  demo2_8.json  demo2_9.json  demo3_2.json  draw2.json  draw4.json  draw7.json  gesture_dancing10.json  gesture_dancing12.json  gesture_dancing15.json  gesture_dancing18.json  gesture_dancing19.json  gesture_dancing22.json  gesture_dancing23.json  gesture_dancing3.json  gesture_dancing6.json  gesture_dancing7.json  hello2.json  hug2.json  hug4.json  lxr_1.json  lxr_4.json  lxr_5.json  pusha1.json  pusha2.json  pushc2.json  refuse2.json  (+13 more)
humanoid_arm/humanoid_arm/: diagnose.py  enumerate_motor.py  humanoid_arm_node.py  joint_trajectory_planner.py  requirements.txt  stop_motor.py  teach.py
humanoid_arm/launch/: humanoid_arm.py  teach.py
humanoid_arm/scripts/: setup_udev_rules.sh
humanoid_base/: CMakeLists.txt  package.xml
humanoid_base/config/: motor_mapping.yaml
humanoid_base/footlib/: CMakeLists.txt
humanoid_base/footlib/include/: foot_forward.h  foot_jacobian_inverse.h  rt_defines.h  rt_nonfinite.h  rtwtypes.h  svd.h  xdotc.h  xrotg.h  xswap.h
humanoid_base/footlib/src/: foot_forward.cpp  foot_jacobian_inverse.cpp  foot_kinematics.cpp  rt_nonfinite.cpp  svd.cpp  xdotc.cpp  xrotg.cpp  xswap.cpp
humanoid_base/footlib/wrapper/: foot_kinematics.h
humanoid_base/include/humanoid_base/: humanoid_base_node.h  protocol.h  protocol_def.h  rich.h  serial_lite.h  serial_manager.h  span.h  usb_device.h
humanoid_base/launch/: humanoid_base.py
humanoid_base/scripts/: setup_scheduler_permission.sh  setup_udev_rules.sh
humanoid_base/src/: composition.cpp  humanoid_base_node.cpp  protocol.c  serial_manager.cpp  usb_device.cpp
humanoid_bringup/: CMakeLists.txt  humanoid.service.example  package.xml
humanoid_bringup/launch/: bringup.py  bringup_direct.py  bringup_without_chat.py
humanoid_bringup/scripts/: humanoid.service  launch.sh  launch_frontend.sh
humanoid_bringup/sounds/: gen_sound.sh
humanoid_chassis/: package.xml  setup.cfg  setup.py
humanoid_chassis/config/: ps3_config.yaml
humanoid_chassis/humanoid_chassis/: chassis_driver_node.py  requirements.txt
humanoid_chassis/launch/: joy_control.py
humanoid_chassis/scripts/: setup_udev_rules.sh
humanoid_chat/: package.xml  setup.cfg  setup.py
humanoid_chat/humanoid_chat/: azure_speech.py  chat_demo.py  director_demo.py  humanoid_chat_node.py  iflytek_spark.py  preset.db  requirements.txt
humanoid_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
humanoid_control/footlib/: CMakeLists.txt
humanoid_control/footlib/include/: foot_forward.h  foot_jacobian.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtwtypes.h
humanoid_control/footlib/src/: foot_forward.cpp  foot_jacobian.cpp  footlib.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp
humanoid_control/footlib/wrapper/: footlib.h
humanoid_control/humanoid_control/: humanoid_control_node.py
humanoid_control/include/humanoid_control/: humanoid_control_node.h  state_estimator.h
humanoid_control/src/: composition.cpp  humanoid_control_node.cpp  state_estimator.cpp
humanoid_description/: CMakeLists.txt  package.xml
humanoid_description/config/: joint_names_humanoid_description.yaml
humanoid_description/launch/: display.py
humanoid_description/meshes/: link1.STL  link10.STL  link11.STL  link12.STL  link13.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL  link8.STL  link9.STL
humanoid_description/rviz/: urdf.rviz
humanoid_description/urdf/: humanoid_description.csv  humanoid_description.urdf  humanoid_description.xacro
humanoid_interface/: CMakeLists.txt  package.xml
humanoid_interface/msg/: ChatResult.msg  FaceControl.msg  HeadFeedback.msg  MotorControl.msg  MotorControlBatch.msg  MotorFeedback.msg  NeckControl.msg
humanoid_interface/srv/: GetArmFrameList.srv  PlayArm.srv  PlayArmSequence.srv  TeachArm.srv
humanoid_web/: package.xml  setup.cfg  setup.py
humanoid_web/humanoid_web/: api_types.py  humanoid_web_node.py
